# PET2BIDS

./: .blackignore  .codespellrc  .gitattributes  .gitignore  .readthedocs.yaml  CITATION.cff  Dockerfile  MANIFEST.in  Makefile  README.md  bytes.txt  code_of_conduct.md  contributing.md  contributors.md  license.txt  paper.bib  paper.md  pet2bids_exe_script.m  pyproject.toml  requirements.txt  revewers.md  setup.cfg  test_file.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  help-me-curate-my-data.md
.github/workflows/:  collect-data.yaml  collect_data.yaml  collect_data_posix.yaml  draft-pdf.yml  environment_variables  matlab.yaml  phantoms.yaml  python.yaml  readthedocs.yaml  setup.yaml  setup_and_cli_test_posix.yaml  setup_phantoms_and_deps.yaml  test-included-binaries.yaml  test_phantoms.yaml  windows.yaml
JOSS_metadata/: persons_info.txt
Metadata_in/: metadata_excel_converted.json  metadata_excel_example.json
PETdata_in/Siemens_ecat/: Readme.md
code/: SiemensHRRTparameters.txt  ecat_headers.json
code/matlab/: GEAdvanceparameters.txt  Readme.md  SiemensHRRTparameters.txt  WriteAnalyzeHdr.m  WriteAnalyzeImg.m  doc.mkd  dotenv.m  ecat2nii.m  ecat2nii_test.m  get_GEAdvance_metadata.m  get_SiemensHRRT_metadata.m  hrrt2neuro.m  jsonwrite.m  readECAT7.m
code/python/: Pipfile  README.md  cli.py  ecat.py  ecat2nii.py  ecat_dump.py  helper_functions.py  main.py  read_ecat.py  requirements.txt  sidecar.py  test_nifti_write.py  test_thisbytes.py  thisbytes.py
data/NIMH/: PDE4_metadata.xls
data/NRU/: cimbi_36_metadata.xls
docs/: about.rst  conf.py  index.rst  installation.rst  matlab.rst  modules.rst  pypet2bids.rst  spreadsheets.rst  usage.rst
docs/media/: pypet2bids_floow.drawio
ecat_testing/: read_matlab_nii.py  test_nii_vs_ecat.m
ecat_testing/ints/: README.md  check_ecat_read.py  ints.m  ints.py  matlab_sample_bytes.bytes  nii_tool.m  template.variables.env
ecat_validation/: ECAT7_multiframe.json  Readme.md  golden_ecat.py  synthentic_ecat_integer_16x16x16x4_pypet2bids.json  synthetic_ecat_integer_16x16x16x4.json  synthetic_ecat_integer_16x16x16x4.mat  synthetic_ecat_integer_16x16x16x4.nii  synthetic_ecat_integer_16x16x16x4.txt  synthetic_ecat_integer_16x16x16x4.v  synthetic_ecat_integer_16x16x16x4.v_error.avi  synthetic_ecat_integer_16x16x16x4_ecat2nii.json  synthetic_ecat_integer_16x16x16x4_ecat2nii.nii  synthetic_ecat_integer_16x16x16x4_ecat2nii_matlab.json  synthetic_ecat_integer_16x16x16x4_pypet2bids_python.json  synthetic_ecat_integer_ecat2nii.json  synthetic_ecat_integer_pypet2bids.json
examples/: excel_template_metadata_example.json  excel_template_metadata_example.xlsx
matlab/: PhillipsVereosparameters.txt  Readme.md  SiemensHRRTparameters.txt  check_metaradioinputs.m  dcm2bids4pet.m  dcm2niix4pet.m  doc.mkd  ecat2nii.m  first_middle_last_frames_to_text.m  first_middle_last_frames_to_text_cell.m  flattenstruct.m  get_GEAdvance_metadata.m  get_SiemensBiograph_metadata.m  get_SiemensHRRT_metadata.m  get_bids_schema.m  get_pet_metadata.m  get_recon_method.m  jsonwrite.m  nii_tool.m  pet2bids.m  pet2bids_exe_script.m  readECAT7.m  run_m2docgen_example.m  run_structure_example.m  telemetry.m  tmp.m  updatejsonpetfile.m
matlab/template_txt/: PhillipsVereosparameters.txt  SiemensBiographparameters.txt  SiemensHRRTparameters.txt
matlab/unit_tests/: ECAT7_multiframe.v_error.avi  Readme.md  check_metaradioinputs_test.m  ecat2nii_test.m  niftiwrite_test.m  readECAT7_test.m
metadata/: PET_Radionuclide.mkd  PET_dicom_reconstruction_methods.json  PET_metadata.json  PET_reconstruction_filters.json  PET_reconstruction_methods.json  Readme.md  blood_metadata.json  dicom2bids.json  dicom2bids_heuristics.json  pet2bids_dirpreserver.m  schema.json
paper/: codemeta.json  persons_info.txt
pet2bids/: .gitignore  LICENSE  MANIFEST.in  setup.cfg  setup.py
pet2bids/pet2bids/: __init__.py  cli.py  ecat.py  (+1 more)
pettobids/: .gitignore  pyproject.toml  requirements.txt
pettobids/pettobids/: README.md  cli.py  ecat.py  ecat2nii.py  read_ecat.py
pettobids/pettobids/tests/: test_write_ecat.py
pettobids/template_env/: SiemensHRRTparameters.env
pettobids/tests/: test_ecatread.py  test_helper_functions.py  test_nifti_write.py  test_pet2bids.py  test_thisbytes.py
pypet2bids/: .gitignore  README.md  pyproject.toml  requirements.txt  template.env
pypet2bids/pypet2bids/: Pipfile  README.md  __init__.py  bids_schema.json  cli.py  convert_pmod_to_blood.py  dcm2niix4pet.py  dicom_convert.py  ecat.py  ecat2nii.py  ecat_cli.py  ecat_header_update.py  ecat_headers.json  golden_ecat.py  helper_functions.py  is_pet.py  metadata.py  metadata_spreadsheet_example_reader.py  multiple_spreadsheets.py  pet_metadata.py  read_ecat.py  sidecar.py  single_spreadsheet.py  telemetry.py  template_json.json  update_json_pet_file.py  write_ecat.py
pypet2bids/pypet2bids/metadata/: PET_metadata.json  PET_reconstruction_methods.json  README  definitions.json
pypet2bids/pypet2bids/tests/: test_write_ecat.py
pypet2bids/tests/: custom_spread_sheet_reader.py  metadata_excel_example_reader.py  scannerparams.txt  test_convert_pmod_to_blood.py  test_dcm2niix4pet.py  test_dicom_convert.py  test_ecat.py  test_ecatread.py  test_helper_functions.py  test_included_binaries.py  test_json_updater.py  test_library_command_line_interfaces.py  test_nifti_write.py  test_pet2bids.py  test_thisbytes.py  test_write_ecat.py
pypettobids/: README.md  ecat2nii.py
python/: ecat.py  ecat2nii.py  ecat_headers.json  main.py  read_ecat.py  siemens.txt  write_ecat.py
redistribution_files/: SiemensBiographparameters.txt  SiemensHRRTparameters.txt  pet2bids_example_dcm.m  pet2bids_example_ecat.m
scripts/: add_python_dependency  compare_jsons.py  installpackage  installpoetry  installuv  matlab_conversions.m  python_conversions.sh  schema_json_to_py  test_all_python_versions  testphantoms
spreadsheet_conversion/: Readme.md  convert_spreadsheet_metadata.m  metadata_excel_example_reader.py  metadata_excel_template.xlsx
templates/: excel_template_metadata.xlsx  ~$excel_template_metadata.xlsx
(+120 files in other folders)
