[tool.poetry]
name = "pet2bids"
version = "0.1.0"
description = ""
authors = ["Anthony Galassi <28850131+bendhouseart@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
