[metadata]
name = PET2BIDS
version = 0.0.1
author = Anthony Galassi
author_email = 28850131+bendhouseart@users.noreply.github.com
description = A python utility for converting ecat images into nifti's and jsons and bids
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openneuropet/PET2BIDS
project_urls =
    Bug Tracker = https://github.com/openneuropet/PET2BIDS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux
    Operating System :: MacOS

[options]
package_dir =
    = pypettobids
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pypet2bids

[options.entry_points]
console_scripts =
    pypet2bids = pypet2bids.main:main